# component-library

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  404.html  GettingStarted.md  LICENSE  README.md  benchmark.yaml  benchmark_geobench_resize.yaml  benchmark_new_backbone.yaml  benchmark_new_backbone_timm.yaml  benchmark_test.yaml  benchmark_timer.yaml  benchmark_v2_resnet.yaml  benchmark_v2_simple.yaml  benchmark_v2_template.yaml  index.html  mkdocs.yml  mlflow_corrupted.py  nasabench_vit_b_os.yaml  objects.inv  pyproject.toml  requirements_ccc_tests.txt  run_tests.py  run_tests.sh  setup.cfg  sitemap.xml  start_ray_workers.sh  tox.ini
.github/: build_operators_commits.txt  dco.yml
.github/workflows/: docs-check.yml  docs.yml  integration-test.yml  main.yml  publish-pypi.yml  pylint.yml  python-app.yml  python-package-conda.yml  python-package.yml
benchmark/: backbone_benchmark.py  benchmark.py  benchmark_ray.py  benchmark_types.py  main.py  mlflow_utils.py  model_fitting.py  plot_tools.py  read_dataset.py  repeat_best_experiment.py  types.py  utils.py
benchmark/config_util/: build_geobench_configs.py  build_iterate_config.py
benchmark/resources/dataset_specifications/: agb.yaml  eurosat.yaml  sen1floods11.yaml  sen1floods11_transforms.yaml
c3/: index.html
c3/create-gridwrapper/: index.html
c3/create-operator/: index.html
c3/operator-utils/: index.html
claimed/util/: gpu_performance_test.py
cli/: index.html
components/util/cosutils/: index.html
components/util/gpu-benchmark/: index.html
configs/: benchmark.yaml  benchmark_geobench.yaml  benchmark_geobench_resize.yaml  benchmark_new_backbone.yaml  benchmark_v2_simple.yaml  dofa_large_patch16_224_upernetdecoder_true.yaml  dofa_large_patch16_224_upernetdecoder_true_modified.yaml  geobench_v1_dofa_large_patch16_224_upernetdecoder_true.yaml  geobench_v1_prithvi.yaml  geobench_v1_resnet.yaml  geobench_v1_ssl4eos12_resnet50_sentinel2_all_moco_smp_unet_true.yaml  gpu_perf_hpo.yaml  gridfm_graphkit_hpo.yaml  nasabench_vit_b_os.yaml  quick_test.yaml  ssl4eos12_resnet50_sentinel2_all_moco_smp_unet_true.yaml  summarize_results.yaml  summarize_results_template.yaml
configs/templates/: template.yaml
configs/tests/: benchmark_marida_l2a_terramind_base.yaml  benchmark_v2_simple.yaml  dofa_large_patch16_224_upernetdecoder_true_modified.yaml  geobench_v1_prithvi_cashew.yaml  geobench_v1_prithvi_chesapeake.yaml  geobench_v1_prithvi_simplified.yaml  geobench_v1_resnet_cashew.yaml  geobench_v1_resnet_chesapeake.yaml  geobench_v1_ssl4eos12_resnet50_sentinel2_all_moco_smp_unet_true.yaml  test_config_util__prithvi_eo_v1_100.yaml
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/c3/: index.html
dev/c3/create-gridwrapper/: index.html
dev/c3/create-operator/: index.html
dev/c3/operator-utils/: index.html
dev/cli/: index.html
dev/contributing/: index.html
dev/for_developers/: index.html
dev/getting-started/: index.html
dev/handover/: index.html
dev/iterate2/: index.html
dev/mlflow/: index.html
dev/mlx/: index.html
dev/mlx/cos-backend/: index.html
dev/mlx/s3-kv-store/: index.html
dev/new_backbone/: index.html
dev/plotting/: index.html
dev/ray/: index.html
dev/repeating_experiments/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: for_developers.md  handover.md  index.md  iterate2.md  mlflow.md  new_backbone.md  plotting.md  ray.md  repeating_experiments.md  roadmap.md  troubleshooting.md
examples/: bumpy_function.py  bumpy_hpo.yaml  bumpy_setter.py  bumpy_setter_hpo.yaml  example_rscript.R  gw_simple_grid_wrapper_example.cwl  gw_simple_grid_wrapper_example.job.yaml  gw_simple_grid_wrapper_example.py  gw_simple_grid_wrapper_example.yaml  iterate_study.db  operator_example.cwl  operator_example.ipynb  operator_example.job.yaml  operator_example.py  operator_example.yaml  pipeline_example.py  run_ccc_gridfm_example.sh  run_lsf_gpu_example.sh  run_lsf_gridfm_example.sh  run_lsf_gridfm_example_postgres.sh  run_setter_example.sh  run_vela_example.sh  run_vela_gpu_perf_example.sh  run_zuvela_gridfm_example.sh  simple_grid_wrapper_example.py  vela_gpu_perf_template.yaml  vela_gridfm_template.yaml  workflow_example.cwl
examples/folder_grid_wrapper_example/: folder_grid_wrapper_example.py  gw_folder_grid_wrapper_example.cwl  gw_folder_grid_wrapper_example.job.yaml  gw_folder_grid_wrapper_example.yaml
examples/simple_grid_wrapper_target/: 3.PROCESSED.txt
examples/stac_item/: create_stac.ipynb
examples/wlm_plugins/: README.md  ccc_plugin.sh  lsf_plugin.sh  vela_plugin.py  zuvela_plugin.sh
getting-started/: index.html
mlx/: index.html
mlx/cos-backend/: index.html
mlx/s3-kv-store/: index.html
plotting/: plot_results_mlflow.ipynb  plot_results_repeated_runs.ipynb
search/: search_index.json
src/: setup.py
src/c3/: create_containerless_operator.py  create_gridwrapper.py  create_operator.py  notebook.py  operator_utils.py  parser.py  pythonscript.py  rscript.py  utils.py
src/c3/templates/: R_dockerfile_template  __init__.py  component_setup_code.py  component_setup_code_wo_logging.py  (+5 more)
src/claimed/: claimed.py
src/claimed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swin3d/: prithvi_swin3d.py  swin3d.py  swin3d_backbone.py  swin_transformer.py
terratorch_iterate/: backbone_benchmark.py  benchmark_ray.py  benchmark_types.py  iterate2.py  iterate_types.py  main.py  model_fitting.py  module.py  plot_tools.py  repeat_best_experiment.py  utils.py
terratorch_iterate/config_util/: build_iterate_config.py
terratorch_iterate/iterate2/: __init__.py  _iterate2.py
tests/: example_notebook.ipynb  example_rscript.R  example_script.py  test_benchmark.py  test_build_geobench_configs.py  test_cli.py  test_compiler.py  test_operator_utils.py
tests/integration/: test_coordinator_plugins.py  test_main.py
tests/unit/: test_build_geobench_configs.py  test_cli.py  test_iterate2.py  test_model_fitting.py  test_tasktypeenum.py
(+23 files in other folders)
