# configuration approach followed:
# - whenever possible, prefer pyproject.toml
# - for configurations insufficiently supported by pyproject.toml, use setup.cfg instead
# - setup.py discouraged; minimal stub included only for compatibility with legacy tools

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["terratorch_iterate*"]

[project]

name = "terratorch-iterate"
version = "0.2.3"
requires-python = ">= 3.11"
description = "A terratorch's plugin for benchmarking and hyperparameter optimization"
authors = [
      { name = "Carlos Gomes"},
      { name = "Daniela Szwarcman"},
      { name = "Francesc Marti Escofet"},
      { name = "Leonardo Pondian Tizzei", email = "ltizzei@br.ibm.com" },
      { name = "Naomi Simumba"},
      { name = "Paolo Fraccaro"},
      { name = "Romeo Kienzler"} 
]
license = { "text" = "Apache License, Version 2.0" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
readme = "README.md"

dependencies = [
"terratorch>=1.1.0", 
# requests>=2.32.0 because of this vulnerability https://github.com/psf/requests/security/advisories/GHSA-9wx4-h78v-vm56
"requests>=2.32.0",
# Jinja2 vulnerability issue https://github.com/pallets/jinja/security/advisories/GHSA-h75v-3vvj-5mfj
"Jinja2>=3.1.5",
# urllib3 vulnerability issue https://github.com/urllib3/urllib3/security/advisories/GHSA-34jh-p97f-mpxf
"urllib3>=2.2.2",
# fix this sqlparse issue https://www.cve.org/CVERecord?id=CVE-2024-4340
"sqlparse>=0.5.0",
# fix this scikit-learn issue https://www.cve.org/CVERecord?id=CVE-2024-5206
"scikit-learn>=1.5.0",
# fix this pillow issue https://pillow.readthedocs.io/en/stable/releasenotes/10.3.0.html#security
"pillow>=10.3.0",
# fix this aiohttp issue https://github.com/aio-libs/aiohttp/security/advisories/GHSA-7gpw-8wmc-pm8g
"aiohttp>=3.9.4",
# fix this tqdm issue https://github.com/tqdm/tqdm/security/advisories/GHSA-g7vv-2v7x-gj9p
"tqdm>=4.66.3",
# fix this werkzeug issue https://github.com/pallets/werkzeug/security/advisories/GHSA-2g68-c3qc-8985
"werkzeug>=3.0.3",
# fix this pytorch-lightning issue https://nvd.nist.gov/vuln/detail/CVE-2024-5452
"pytorch-lightning>=2.3.3",
"more-itertools", 
"importlib-metadata",
"numpy",
"mlflow",
"optuna",
"types-tabulate",
"ray<=2.49.2",
"gputil",
"asyncio",
"opencv-python-headless",
"configspace",
"optuna-integration",
"psutil",
"tabulate>=0.9.0",
"torch<=2.2.2",
"seaborn"
]

[project.urls]
Homepage = "https://github.com/IBM/terratorch-iterate"
Issues = "https://github.com/IBM/terratorch-iterate/issues"

[project.optional-dependencies]
dev = [
  "ruff",
  "flake8", 
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike", # for building docs with versions
  "tox",
  "pre-commit",
  ]

test = [
  "coverage",
  "pytest",
  "pytest-cov"
]

utility = [
  "geobench"
]
# If you want to catch Nvidia GPU metrics, you also need to install pynvml:
nvidia = ["pynvml"]

# If you are using AMD/HIP GPUs, install pyrsmi 
amd = ["pyrsmi"]

[tool.black]
target-version = ["py312"]
line-length = 88
skip-string-normalization = true

[project.scripts]
iterate = "terratorch_iterate.main:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_to_top = ["rdkit", "scikit-learn"]

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

# [tool.pytest.ini_options]
# addopts = "--cov=benchmark --cov-report html"